--- a/TwitterServer/appsettings.json
+++ b/TwitterServer/appsettings.json
@@ -9,5 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JwtKey": "7DE06BB3-770F-47D9-B706-8284BE78C24E",
   "AllowedHosts": "*"
 }
